invalid_label_arg_keywords_test/invalid_label_arg_keywords_test_2.src
.IPPcode24
CALL GF@a